fix(Header): fix horizontal padding so it aligns with main

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -7,7 +7,7 @@
   box-shadow: var(--e-box-shadow-2);
   color: var(--e-color-ground);
   margin-bottom: var(--e-space-4);
-  padding: var(--e-space-1) var(--e-space-3);
+  padding: var(--e-space-1) var(--e-space-2);
   transition-duration: var(--e-time-0);
   transition-property: background-color, color;
   transition-timing-function: var(--e-easing-standard);
